[package]
name = "war_score"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix = "0.13"
actix-web-actors = "4.2"
log = "0.4.28"
redis = "0.32.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
