[package]
name = "war_score"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.12.1"
actix-ws = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "time"] }
log = "0.4.29"
redis = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
